=zero3_deepspeed_t5_small_initial_1138009.err
  File "/home/s1930443/MRP1/t5_base_initial_deepspeed.py", line 193
    print("Expected arguments for this script are: {}".format(expected_arg_list)
         ^
SyntaxError: '(' was never closed
  File "/home/s1930443/MRP1/t5_base_initial_deepspeed.py", line 193
    print("Expected arguments for this script are: {}".format(expected_arg_list)
         ^
SyntaxError: '(' was never closed
  File "/home/s1930443/MRP1/t5_base_initial_deepspeed.py", line 193
    print("Expected arguments for this script are: {}".format(expected_arg_list)
         ^
SyntaxError: '(' was never closed
  File "/home/s1930443/MRP1/t5_base_initial_deepspeed.py", line 193
    print("Expected arguments for this script are: {}".format(expected_arg_list)
         ^
SyntaxError: '(' was never closed
bash: --deepspeed_config_filepath: command not found
